# Language-parser

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  error.rs  interpreter.rs  lib.rs  main.rs  symbol_table.rs  tac.rs  token.rs
src/phases/: codegen.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
tests/: integration_tests.rs
